tests/ui/standalone_function_no_params.rs
// `#[hegel::standalone_function]` requires at least one parameter (the test
// case).

#[hegel::standalone_function]
fn bad() {}

fn main() {}
